--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-time-picker",
+  "name": "react-time-dialog-picker",
   "version": "1.0.0",
   "description": "Made with create-react-library",
   "author": "Chathura Dev",
